fixing z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -40,3 +40,9 @@
     }
   }
 }
+
+@media (max-width: 540px) {
+  .header {
+    z-index: 99;
+  }
+}
